--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "jest-environment-jsdom": "^29.5.0",
     "lodash": "^4.17.21"
   },
