--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-import": "^2.27.5",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "jest": "^29.5.0",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
